# anki-mcp

./: README.md  anki_mcp.py  pyproject.toml  server.json
.github/instructions/: AGENTS.md.instructions.md
