[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
]

[project.scripts]
anki-mcp = "anki_mcp:main"

[tool.setuptools]
py-modules = ["anki_mcp"]

[tool.setuptools.packages.find]
# Look for packages in the root directory (where pyproject.toml is)
where = ["."]
